kube/kustomize/overlays/dev/harness-patch-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-service
spec:
  selector:
    matchLabels:
      app: accounts-service
  replicas: 2
  template:
    spec:
      containers:
        - name: accounts-service
          image: <+pipeline.stages.Build.spec.execution.steps.Build_and_Push_to_DockerHub["artifact-Build_and_Push_to_DockerHub"].stepArtifacts.publishedImageArtifacts[0].imageName>:<+pipeline.stages.Build.spec.execution.steps.Build_and_Push_to_DockerHub["artifact-Build_and_Push_to_DockerHub"].stepArtifacts.publishedImageArtifacts[0].tag>
