kube/kustomize/overlays/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: app1.eks.bootstrap.psomanna.us
      http:
        paths:
          - path: /accounts-service
            pathType: Prefix
            backend:
              service:
                name: accounts-service
                port:
                  number: 443
